--- a/views/partials/campaign-detail.html
+++ b/views/partials/campaign-detail.html
@@ -9,7 +9,7 @@
 
 <img id="spinner" ng-src="img/ajax-loader-snake.gif" ng-hide="isHide">
 
-<div class="row">
+<div class="row" ng-show="isHide">
     <div class="col-lg-4">
 
         <div class="row">
@@ -24,7 +24,7 @@
 
         <div class="row" style="overflow: hidden;">
             <div class=" pull-left" ng-repeat="img in campaign.thumbs" style="width: 15%;">
-            <img ng-src="{{img}}" class="img-thumbnail" />
+            <img ng-src="{{img}}" class="img-thumbnail" ng-click="setImage(img)"/>
             </div>
         </div>
 
